# sirtck

./: Cargo.toml  README.md
src/: check_branch_manager.rs  file_task_manager.rs  main.rs  pr_task_manager.rs
src/entity/: mod.rs  score.rs  task.rs
tasks/: tasks.json
tasks/zad1/tests/: test.rs
